<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_strategy_select"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jamestic.softballstrategy.ui.CategorySelectActivity"
    android:background="@color/colorInfield">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/categoryHeaderLayout"
        android:background="@color/colorOutfield">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selectCategoryView"
            android:background="@color/colorOutfield"
            android:textSize="36sp"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:textStyle="normal|bold|italic"
            android:text="@string/beginButton"
            android:textAllCaps="false"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:id="@+id/textDivider0"
            android:background="@color/colorSoftball"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:id="@+id/categorySubHeaderLayout"
            android:background="@color/colorOutfield"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/softball_icon_2"
                android:id="@+id/imageView2"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/softballIcon1"
                android:adjustViewBounds="true"/>

            <TextView
                android:text="@string/catSelectHeaderText"
                android:layout_height="wrap_content"
                android:id="@+id/selectSubCategoryView"
                android:textColor="@color/colorWhite"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="normal|bold"
                android:contentDescription="@string/catSelectHeaderDesc"
                android:background="@color/colorOutfield"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_width="250dp"
                android:paddingBottom="5dp"
                android:textAllCaps="false"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/softball_icon_1"
                android:id="@+id/imageView3"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/softballIcon2"
                android:adjustViewBounds="true"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:id="@+id/textDivider1"
        android:background="@color/colorWhite"
        android:layout_below="@+id/categoryHeaderLayout"
        />

    <Button
        android:text="@string/backButtonText"
        android:layout_width="match_parent"
        android:id="@+id/choiceBackButton"
        android:contentDescription="@string/backButtonDesc"
        android:textSize="24sp"
        android:background="@android:drawable/btn_default"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:layout_height="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textDivider1"
        android:layout_above="@+id/choiceBackButton"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:id="@+id/categoryButtonLayout">

        <Button
            android:text="@string/choice1TextEx"
            android:layout_width="match_parent"
            android:id="@+id/choice1Button"
            android:textSize="24sp"
            android:background="@drawable/base_texture1"
            android:contentDescription="@string/choice1ButDesc"
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_height="75dp"
            />

        <Button
            android:text="@string/choice2TextEx"
            android:layout_width="match_parent"
            android:id="@+id/choice2Button"
            android:background="@drawable/base_texture1"
            android:textSize="24sp"
            android:visibility="visible"
            android:textAlignment="center"
            android:layout_weight="1"
            android:contentDescription="@string/choice2ButDesc"
            android:layout_marginTop="20dp"
            android:layout_height="75dp"/>

        <Button
            android:text="@string/choice3TextEx"
            android:layout_width="match_parent"
            android:id="@+id/choice3Button"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textSize="24sp"
            android:contentDescription="@string/choice3ButDesc"
            android:background="@drawable/base_texture1"
            android:layout_marginTop="20dp"
            android:layout_height="75dp"/>

        <Button
            android:text="@string/choice4TextEx"
            android:layout_width="match_parent"
            android:id="@+id/choice4Button"
            android:contentDescription="@string/choice4ButDesc"
            android:layout_weight="1"
            android:textSize="24sp"
            android:background="@drawable/base_texture1"
            android:layout_marginTop="20dp"
            android:layout_height="75dp"/>

    </LinearLayout>


</RelativeLayout>
