<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_situation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jamestic.softballstrategy.ui.SituationActivity"
    android:background="@color/colorInfield">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sitHeaderLayout"
        android:background="@color/colorOutfield">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/situationTitleText"
            android:text="@string/sitTypeHeadEx"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:layout_marginBottom="5dp"
            android:textStyle="normal|bold"
            android:paddingTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/subSituationTitleText"
            android:text="@string/sitHitLocEx"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:layout_marginBottom="5dp"
            android:textStyle="normal|bold|italic"/>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:id="@+id/textDivider2"
        android:background="@android:color/white"
        android:layout_below="@id/sitHeaderLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@id/textDivider2"
        android:id="@+id/sitImageLayout"
        android:layout_height="225dp"
        android:background="@color/colorOutfield">

        <ImageView
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/cutoff_norunner_center"
            android:id="@+id/sitImageView"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:contentDescription="@string/sitSolImgViewDescr"
            android:layout_width="0dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:id="@+id/textDivider3"
        android:background="@android:color/white"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/sitImageLayout"/>

    <Button
        android:text="@string/backButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/sitBackButton"
        android:textSize="24sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/sitScrollView"
        android:layout_below="@id/textDivider3"
        android:layout_above="@id/sitBackButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/scrollLinLayout"
            android:paddingTop="15dp">

        <TextView
            android:text="@string/sitDescEx"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/sitAnswerTextView"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:lineSpacingExtra="2sp"/>
        </LinearLayout>
    </ScrollView>



</RelativeLayout>
