<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_situation_explain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jamestic.softballstrategy.ui.ExplainSituationActivity"
    android:background="@color/colorOutfield">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sitExpHeaderLayout"
        android:background="@color/colorOutfield">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/catExplainHeadView"
            android:background="@color/colorOutfield"
            android:textSize="38sp"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:textStyle="normal|bold|italic"
            android:text="Cut-Offs"
            android:textAllCaps="false"/>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:id="@+id/categorySubHeaderLayout"
            android:background="@color/colorOutfield"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/softball_icon_2"
                android:id="@+id/imageView2"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/softballIcon1"
                android:adjustViewBounds="true"/>

            <TextView
                android:text="What Are They?"
                android:layout_height="wrap_content"
                android:id="@+id/subCatExpHeadView"
                android:textColor="@color/colorWhite"
                android:textSize="32sp"
                android:textAlignment="center"
                android:textStyle="normal|bold"
                android:contentDescription="@string/catSelectHeaderDesc"
                android:background="@color/colorOutfield"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_width="250dp"
                android:paddingBottom="5dp"
                android:textAllCaps="false"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/softball_icon_1"
                android:id="@+id/imageView3"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/softballIcon2"
                android:adjustViewBounds="true"/>

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:id="@+id/textDivider1"
        android:background="@color/colorWhite"
        android:layout_below="@id/sitExpHeaderLayout"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/sitExpInfoTextView"
        android:layout_below="@id/textDivider1"
        android:background="@color/colorInfield"
        android:layout_height="match_parent"
        android:layout_above="@+id/textDivider2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/sitExpInfoLayout"
            android:layout_gravity="center">

            <TextView
                android:text="@string/whatAreCutOffs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sitInfoTextView"
                android:textColor="@color/colorWhite"
                android:background="@color/colorInfield"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="20sp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:lineSpacingExtra="1sp"/>
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:id="@+id/textDivider2"
        android:background="@color/colorWhite"
        android:layout_above="@+id/selectPosRelativeLayout"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/backNextButLinLayout"
        android:background="@color/colorInfield">

        <Button
            android:text="@string/backButtonText"
            android:layout_width="0dp"
            android:id="@+id/sit2BackButton"
            android:textSize="24sp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:background="@drawable/base_texture1"
            android:layout_margin="5dp"/>

        <Button
            android:text="Start"
            android:layout_width="0dp"
            android:id="@+id/sitStartButton"
            android:textSize="24sp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:background="@drawable/base_texture1"
            android:layout_margin="5dp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOutfield"
        android:id="@+id/selectPosRelativeLayout"
        android:layout_above="@+id/backNextButLinLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/selectPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selectPosTextView"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:layout_marginBottom="5dp"
            android:textStyle="normal|bold"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"/>

        <View
            android:layout_height="5dp"
            android:id="@+id/textDivider3"
            android:background="@color/colorWhite"
            android:layout_alignBottom="@+id/selectPosTextView"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/posSelectSpinner"
            android:layout_below="@+id/selectPosTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:background="@android:drawable/spinner_background"/>
    </RelativeLayout>


</RelativeLayout>
